# ROS2-EOII

./: .gitignore  LICENSE  README.md
docs/: documentacion.tex  documentacion_extendida.tex
follower/: package.xml  setup.py
follower/follower/: catch_info_action.py  create_explorer.py  explorer_velocity.py  follower.py  follower_action_client.py  follower_client.py  follower_server_client.py  pose_savers.py  shared_poses.py  turtle_info_service.py
follower/launch/: launch.xml  launch_with_action_client.xml  launch_with_server_client.xml
follower_interfaces/: CMakeLists.txt  package.xml
follower_interfaces/action/: CatchInfo.action
follower_interfaces/srv/: TurtleInfo.srv
launch/: launch.xml
